[tool.poetry]
name = "programming-dp"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "programming_dp"}]

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.6.1"
numpy = "^1.23.4"
jupyter-book = "^0.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
